# rl-pendulum-gazebo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test_mujoco.cpp
assets/ur5/: lab_env.xml
ur5_control/: CMakeLists.txt  package.xml
ur5_control/scripts/: auto_encoder.py  network.py  sac.py  ur5_env.py  ur5_train.py
ur5_gazebo/: CMakeLists.txt  README.md  package.xml
ur5_gazebo/include/ur5_gazebo/: ur5_model_plugin.hpp
ur5_gazebo/launch/: ur5_gazebo.launch
ur5_gazebo/models/pendulum/: model.config  model.sdf
ur5_gazebo/src/: ur5_model_plugin.cpp
ur5_gazebo/worlds/: ur5.world
ur5_msgs/: CMakeLists.txt  README.md  package.xml
ur5_msgs/msg/: Action.msg  State.msg
ur5_mujoco/: CMakeLists.txt  README.md  package.xml
ur5_mujoco/include/ur5_mujoco/: glfw_func.hpp  mujoco_structure.hpp
ur5_mujoco/src/: glfw_func.cpp  sample.cpp  test_mujoco.cpp  ur5_mujoco_node.cpp
